añadido .env, folder tests, vue.config, base.css en assets con root general para todo el proyecto y reorganización de fotos. Posible problema con las rutas de los css del anterior commit realizado.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -271,7 +271,7 @@ a {
       rgb(0 0 0 / 40%),
       rgb(0 0 0 / 40%)
     ),
-    url("../assets/fondo_web.svg");
+    url("../assets/images/fondo_web.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
