--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,38 +23,44 @@ body {
 
 h1 {
   font-family: var(--title-font);
-  font-weight: 700;
-  font-size: 2.5rem;
+  font-weight: 800;
+  font-size: 2.4rem;
+  margin: 0;
 }
 
 h2 {
   font-family: var(--text-font);
   font-weight: 700;
   font-size: 2rem;
+  margin: 0;
 }
 
 h3 {
   font-family: var(--text-font);
   font-weight: 600;
   font-size: 1.25rem;
+  margin: 0;
 }
 
 h4 {
   font-family: var(--text-font);
   font-weight: 600;
   font-size: 1rem;
+  margin: 0;
 }
 
 p {
   font-family: var(--text-font);
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 0.8rem;
+  margin: 0;
 }
 
 p .footer {
   font-family: var(--text-font);
   font-weight: 400;
   font-size: 0.8rem;
+  margin: 0;
 }
 
 ul {
@@ -65,4 +71,24 @@ ul {
 a {
   text-decoration: none;
   margin: 0;
+}
+
+@media screen and (min-width: 767px) {
+  h2 {
+    font-size: 2.2rem;
+  }
+
+  p {
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (min-width: 1170px) {
+  h2 {
+    font-size: 2.5rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
 }
