--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -18,5 +18,62 @@ $swal2-cancel-button-background-color: var(--green);
 $swal2-cancel-button-color: var(--white);
 $swal2-button-margin: 0 0.5rem;
 
+
+//SELECT
+
+//  Global Component Variables
+$vs-component-bg: none !default;
+$vs-component-line-height: 1.4 !default;
+$vs-component-placeholder-color: inherit !default;
+$vs-component-cursor: pointer;
+
+//  Active State
+$vs-state-active-bg: var(--green) !default;
+$vs-state-active-color: #fff !default;
+
+//  Deselect State
+$vs-state-deselect-bg: #fb5858 !default;
+$vs-state-deselect-color: #fff !default;
+
+//  Disabled State
+$vs-state-disabled-bg: rgb(248, 248, 248) !default;
+$vs-state-disabled-color: map_get($vs-colors, 'light') !default;
+$vs-state-disabled-controls-color: map_get($vs-colors, 'light') !default;
+$vs-state-disabled-cursor: not-allowed !default;
+
+//  Borders
+$vs-border-width: 1px !default;
+$vs-border-style: solid !default;
+$vs-border-radius: 2rem !default;
+$vs-border-color: map_get($vs-colors, 'lightest') !default;
+
+//  Component Controls: Clear, Open Indicator
+$vs-controls-color: map_get($vs-colors, 'light') !default;
+$vs-controls-size: 1 !default;
+$vs-controls-deselect-text-shadow: 0 1px 0 #fff !default;
+
+//  Selected
+$vs-selected-bg: var(--green) !default;
+$vs-selected-border-color: $vs-border-color  !default;
+$vs-selected-border-style: $vs-border-style  !default;
+$vs-selected-border-width: $vs-border-width  !default;
+
+//  Dropdown
+$vs-dropdown-z-index: 1000 !default;
+$vs-dropdown-min-width: 160px !default;
+$vs-dropdown-max-height: 350px !default;
+$vs-dropdown-box-shadow: 0px 3px 6px 0px map_get($vs-colors, 'darkest') !default;
+$vs-dropdown-bg: var(--orange);
+
+
+.vs--searchable .vs__dropdown-toggle,
+input {
+    cursor: pointer !important;
+}
+
+.vs__dropdown-toggle {
+    width: 10rem;
+}
+
 @import '../../node_modules/sweetalert2/src/sweetalert2.scss';
 @import '../../node_modules/vue-select/src/scss/vue-select.scss';
